--- a/requirements.txt
+++ b/requirements.txt
@@ -28,16 +28,7 @@ imageio==2.23.0
 iniconfig==1.1.1
 ipykernel==6.17.1
 ipython==8.7.0
-jax==0.4.1
-jaxlib==0.4.1+cuda11.cudnn86
-jedi==0.18.2
-Jinja2==3.1.2
-jmp==0.0.2
-jraph @ git+https://github.com/deepmind/jraph.git@51f5990104f7374492f8f3ea1cbc47feb411c69c
-jsonschema==4.17.3
-jupyter_client==7.4.8
-jupyter_core==5.1.0
-jupyterlab-pygments==0.2.2
+jax==0.4.*
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
